--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "Xethron/l4-to-string": "1.*"
     },
     "require-dev": {
         "anlutro/l4-config-mock": "dev-master",
